2009-02-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added namespace access tests.

2009-02-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	  Added test case for new "as" completion context.

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added
	  test for "Bug 473849 - Classes with no visible constructor
	  shouldn't appear in "new" completion".

2009-02-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Properly
	  fix warning.

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for "Bug 473686 - Constants are not included in code
	  completion".

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests/SelectionTests.cs:
	* MonoDevelop.Xml.StateEngine/TestParser.cs:
	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.Projects/CompletionDatabaseTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Fixed
	  compiler warnings.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* UnitTests.csproj: Remove unwanted copy-to-output.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* UnitTests.csproj: Fix referenced GTK# version.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* UnitTests.csproj: More refs to keep csc happy.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  Adding C#3 query expression test.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj: 

	* Mono.TextEditor.Tests/SyntaxHighlightingTests.cs: added
	  syntax highlighting tests.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: fixed